{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 275,
  "lineage": "7ffadf41-6055-1ed5-3a05-b7a203f720d0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e601abe3e1a910f",
            "arn": "arn:aws:ec2:eu-central-1:988153901792:instance/i-052889b0fcf6179d6",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-052889b0fcf6179d6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "Rundeck-test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0190cc37fabfa4d9c",
            "private_dns": "ip-172-31-45-10.eu-central-1.compute.internal",
            "private_ip": "172.31.45.10",
            "public_dns": "ec2-3-72-107-156.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.72.107.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-074d8855ef1223fc4",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "secgroup-example"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01882836200b46a05",
            "tags": {
              "Description": "Rundeck Terraform Deployment EC2 instance",
              "Name": "Rundeck EC2 Deployment"
            },
            "tags_all": {
              "Description": "Rundeck Terraform Deployment EC2 instance",
              "Name": "Rundeck EC2 Deployment",
              "env": "example"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-074d4133e18c1fa44"
            ]
          },
          "dependencies": [
            "aws_security_group.secgroup-example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secgroup-example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:988153901792:security-group/sg-074d4133e18c1fa44",
            "description": "Security Group for Rundeck Terraform Deployment Example",
            "egress": [],
            "id": "sg-074d4133e18c1fa44",
            "ingress": [],
            "name": "secgroup-example",
            "name_prefix": "",
            "owner_id": "988153901792",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Rundeck Terraform Deployment Example Security Group"
            },
            "tags_all": {
              "Name": "Rundeck Terraform Deployment Example Security Group",
              "env": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eae937cb9e36f396"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "all",
            "from_port": 0,
            "id": "sgrule-1381457307",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-074d4133e18c1fa44",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.secgroup-example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mariadb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "mariadb",
            "from_port": 3306,
            "id": "sgrule-1769260951",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-074d4133e18c1fa44",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.secgroup-example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rundeck",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "rundeck",
            "from_port": 4440,
            "id": "sgrule-3626120839",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-074d4133e18c1fa44",
            "self": false,
            "source_security_group_id": null,
            "to_port": 4440,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.secgroup-example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ssh",
            "from_port": 22,
            "id": "sgrule-788110778",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-074d4133e18c1fa44",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.secgroup-example"
          ]
        }
      ]
    }
  ]
}